[tool.poetry]
name = "netauto-lab01"
version = "0.1.0"
description = ""
authors = ["Brad Haas <bradh11@gmail.com>"]
readme = "README.md"
packages = [{include = "netauto_lab01"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
